2017-03-27  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/local_test.layout: add a random seed button.
	* media/layouts/local_test.layout: Play button is disabled by default.
	* media/layouts/local_test.layout: add existing world list..
	* media/layouts/local_test.layout: add name text edit.

2017-03-20  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: add the new world/server relation question.

2017-03-17  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/local_test.layout: add and load the XML layout.
	* src/client/GameEngine.cpp (toLocalTest): correctly switch from
	current state to LocalTest.

2017-03-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp: add empty overriden functions.
	* src/client/LocalTest.cpp: add empty class.

2017-03-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LoadingBar.cpp (step): implement function.
	* src/client/LoadingBar_Test.cpp (stepSize): test implemented.
	* src/client/LoadingBar.cpp (stepSize): implement getter.
	* media/layouts/loading_bar.layout: fix the windows placements.

2017-03-09  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/loading_bar.layout: add the LoadingBar layout file.

	* src/client/LoadingBar_Test.cpp (vectorSize): add a unit test to
	LoadingBar.

	* src/client/LoadingBar.cpp (LoadingBar): create an empty class.

	* ROADMAP: postpone overlays in highter resolution bug.

2017-02-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ConfirmationDialog.cpp (onCancel): move event handler
	from ModalDialog.cpp
	* src/client/ConfirmationDialog.cpp (onOk): move event handler
	from ModalDialog.cpp

	* src/client/ConfirmationDialog.hpp (ConfirmationDialog); create the
	empty class.

	* src/client/ModalDialog.cpp (exec): uncomment the loop and add a
	FIXME comment.

	* src/client/ModalDialog.cpp (closeDialog): set returnValue and
	stop waiting.
	* src/client/ModalDialog.hpp (returnValue): add the exec() function
	return value as member.
